objects/PSS_Component__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>People and Workspaces</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
                <value>
                    <fullName>Call Flow</fullName>
                </value>
                <value>
                    <fullName>IVR Schedules</fullName>
                </value>
                <value>
                    <fullName>Queues</fullName>
                </value>
                <value>
                    <fullName>Media Routing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Scripts</fullName>
                </value>
                <value>
                    <fullName>Basic Data Integration</fullName>
                </value>
                <value>
                    <fullName>Dialer Campaign Setup</fullName>
                </value>
                <value>
                    <fullName>Discovery and Design</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>UAT planning and Support</fullName>
                </value>
                <value>
                    <fullName>Go-Live planning and support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Count__c *  value(text(Unit_Cost__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>How many of these PSS catalog items will the customer consume during implementation?</inlineHelpText>
        <label>Count</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Notes for Services hand-off</description>
        <inlineHelpText>Field is auto-generated by Token Calculator</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LegacyPSSComId__c</fullName>
        <label>Legacy PSS Com Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Add any additional notes that would be helpful during the services hand-off</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Component__c</fullName>
        <label>Services Component</label>
        <referenceTo>Services_Component__c</referenceTo>
        <relationshipLabel>PSS Components</relationshipLabel>
        <relationshipName>PSS_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PSS Component</label>
    <nameField>
        <displayFormat>PSS-{0000}</displayFormat>
        <label>PSS Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSS Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>